tests/sa-tests-db/basic_set/c/1-tainted/infer-out/report.txt
#0
test_0a3b5ef7bb54__cwe1284__tainted_func_input-critical_sink__if-check-param__ispras_positive.c:19: error: Nullptr Dereference
  Pulse found a potential null pointer dereference  on line 18.
  17. void critical_sink(int func_param) {
  18.   char *malloc_res = (char *)malloc(func_param);
  19.   malloc_res[0] = 0;
        ^
  20.   free(malloc_res);
  21. }

#1
test_0a3b5ef7bb54__cwe1284__tainted_func_input-critical_sink__if-check-param__ispras_positive.c:19: error: Null Dereference
  pointer `malloc_res` last assigned on line 18 could be null and is dereferenced at line 19, column 3.
  17. void critical_sink(int func_param) {
  18.   char *malloc_res = (char *)malloc(func_param);
  19.   malloc_res[0] = 0;
        ^
  20.   free(malloc_res);
  21. }

#2
test_0a3b5ef7bb54__cwe1284__tainted_func_input-critical_sink__if-check-param__ispras_positive.c:30: error: Dead Store
  The value written to &quantity (type int) is never used.
  28. 
  29. void func(int param) {
  30.   int quantity = 11;
        ^
  31. 
  32.   quantity = get_source();

Found 3 issues
                Issue Type(ISSUED_TYPE_ID): #
        Null Dereference(NULL_DEREFERENCE): 1
  Nullptr Dereference(NULLPTR_DEREFERENCE): 1
                    Dead Store(DEAD_STORE): 1
